--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                                 <div class="col">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label"> Remember me
-                                        </label>
+                                        <label class="form-check-label"> Remember me</label>
                                     </div>
                                 </div>
                             </div>
@@ -97,15 +96,61 @@
     </div>
 
     <div class="container">
+
+        <div class="row row-content">
+            <div class="col-md-8 mx-auto">
+                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#homeCarousel" data-slide-to="1"></li>
+                        <li data-target="#homeCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
+                            <div class="carousel-caption">
+                                <h3>Breadcrumb Trail Campground</h3>
+                                <p class="d-non d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
+                            <div class="carousel-caption">
+                                <h3>React Lake Campground</h3>
+                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                            <div class="carousel-caption">
+                                <h3>Chrome River Campground</h3>
+                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 h2 class="text-sm-right">Discover & Review</h2>
             </div>
-            <div class="media">
-                <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" />
-                <div class="media-body align-self-center">
-                    <h3>Our Campsites</h3>
-                    <p class="d-none d-sm-block"> Explore our growing database of curated campsites and leave your own reviews!</p>
+            <div class="col">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" />
+                    <div class="media-body align-self-center">
+                        <h3>Our Campsites</h3>
+                        <p class="d-none d-sm-block"> Explore our growing database of curated campsites and leave your own reviews!</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -132,7 +177,7 @@
             <div class="col">
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-                    <div class="media body align-self-center">
+                    <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
                         <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
                     </div>
@@ -143,14 +188,14 @@
         <div class="row row-content align-items-center">
             <div class="col col-sm-6 mx-auto">
                 <div class="card">
-                    <h3 class="card-header text-white bg-info" id="reserveForm">Reserve a Campsite</h3>
+                    <h3 class="card-header text-white bg-info">Reserve a Campsite</h3>
                     <div class="card-body">
-                        <form>
+                        <form id="reserveForm">
                             <div class="form-group row">
                                 <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers</label>
                                 <div class="col-sm-6">
                                     <select id="numCampers" name="numCampers" class="form-control">
-                                        <option value="Select">Select...</option>
+                                        <option selected>Select...</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
@@ -160,13 +205,13 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="form-group row">
                                 <label for="date" class="col-sm-6 col-form-label">Date</label>
                                 <div class="col-sm-6">
                                     <input class="form-control" type="date" id="date" name="date" placeholder="date"/>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="form-group row">
                                 <div class="col">
                                     <button class="btn btn-primary" type="submit">Search</button>
                                 </div>
